minor fixes + adds lightbox behind popup

--- a/src/components/courts/courts.css
+++ b/src/components/courts/courts.css
@@ -4,6 +4,15 @@
     }
 }
 
+.lightbox {
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
+    top: 0;
+    background: rgba(255, 255, 255, 0.5);
+}
+
 .popup {
     position: absolute;
     z-index: 100;
